public/style/index.css
:root {
  font-family: "Roboto", sans-serif;
  user-select: none;
  color: white;
  font-size: 14px;

  --background-bright: #273338;
  --background: #323e44;
  --progress-stripe: rgb(60, 79, 87);
  --text-bright: #7399a8;

  --header-background: var(--background-bright);
  --container-width: 648px;
}

body {
  margin: 0;
  background-color: var(--background-bright);
}

a {
  text-decoration: none;
  color: white;
}

.button {
  cursor: pointer;
}

.main {
  display: flex;
  flex-direction: column;
  width: 100%;
  height: 100%;
  min-height: 517px;
  background-color: var(--background);
  position: absolute;
}

.header {
  position: absolute;
  top: 0;
  width: 100%;
  height: 60px;
  background-color: var(--header-background);
  background-image: url("../image/icon-large.png");
  background-repeat: no-repeat;
  background-size: 65px;
  background-position-y: center;
  background-position-x: 10px;
  display: flex;
}

.appLabel {
  color: white;
  text-indent: 90px;
  line-height: 60px;
  font-size: 20px;
  font-weight: bold;
}

.appLabelSub {
  color: var(--text-bright);
  line-height: 65px;
  font-size: 16px;
  margin-left: 30px;
}

.container {
  width: 608px;
  margin: 90px auto auto auto;
}

.inputZip {
  margin: 20px;
}

.inputZipLabel {
  color: white;
  font-weight: bold;
  margin-right: 10px;
  cursor: pointer;
}

.inputLabel {
  margin-right: 10px;
  min-width: 50%;
  width: 100%;
}

.inputLabel input {
  display: none;
}

.inputLabel:last-child {
  margin-left: 10px;
  margin-right: 0;
}

.progressContainer {
  width: 100%;
}

.progress {
  background-color: #263238;
  width: 100%;
  height: 38px;
  margin-top: 10px;
  position: relative;
  border-radius: 8px;
}

.progressBar {
  position: absolute;
  top: 0;
  left: 0;
  height: 38px;
  border-top-left-radius: 8px;
  border-bottom-left-radius: 8px;
  background-color: #191f22;
}

.progressBar[data-intermediate="false"] {
  background-color: #191f22;
}

.progressBar[data-intermediate="true"] {
  background-size: 60px 60px;
  background-image: linear-gradient(
    45deg,
    #263238 25%,
    transparent 25%,
    transparent 50%,
    #263238 50%,
    #263238 75%,
    transparent 75%,
    transparent
  );
  animation: animateStripes 1s linear infinite;
  background-color: #192124;
}

@keyframes animateStripes {
  from {
    background-position: 0 60px;
  }
  to {
    background-position: 0 0;
  }
}

.progressBar[data-fullwidth="true"] {
  border-top-right-radius: 8px;
  border-bottom-right-radius: 8px;
}

.progressLabel {
  position: absolute;
  margin-left: 5px;
  top: 0;
  left: 0;
  line-height: 36px;
  color: var(--text-bright);
  font-size: 15px;
}

.message {
  height: 40px;
  margin-top: 10px;
  line-height: 40px;
  margin-bottom: 10px;
  padding-left: 5px;
}

.downloadMessage {
  color: white;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.errorMessage {
  color: rgb(202, 53, 105);
  user-select: text;
}

.footer {
  position: absolute;
  left: 0;
  bottom: 0;
  width: 100%;
  height: 120px;
  background-color: var(--background-bright);
}

.footerContent {
  margin: 10px;
  font-size: 13px;
  color: var(--text-bright);
}

.footerRow {
  text-align: center;
}

.vFlex {
  display: flex;
  flex-direction: column;
}

.hFlex {
  display: flex;
}

.roundButton {
  border: solid 1px gray;
  border-radius: 8px;
  height: 38px;
  min-height: 38px;
  line-height: 38px;
  cursor: pointer;
  padding: 0 20px 0 20px;
  text-align: center;
  background-color: #273338;
}

.roundButton:hover {
  background-color: #323e41;
}

.roundButton:active {
  background-color: #4d5a60;
  /*background-color: red;*/
}

.modeSelectButton {
  width: calc(var(--container-width) / 2);
  margin: 10px;
}

